filters after, before and at (random either before or after) demonstration that may be useful in different scenarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=IadH1GGMDv
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# to log debugging of spring security
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
