--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # to log debugging of spring security
-logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
