--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 server.port=8081
 #spring.jpa.hibernate.ddl-auto=update
-#mysql params got from hosted using https://www.freemysqlhosting.net/
-MYSQL_HOST=sql7.freemysqlhosting.net
+MYSQL_HOST=spring-security-db.cr2rtsoqegh6.us-east-1.rds.amazonaws.com
 MYSQL_PORT=3306
-MYSQL_DATABASE_NAME=sql7598211
+MYSQL_DATABASE_NAME=sys
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT}/${MYSQL_DATABASE_NAME}
-spring.datasource.username=sql7598211
-spring.datasource.password=IadH1GGMDv
+spring.datasource.username=admin
+spring.datasource.password=Mysqldb1!
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # to log debugging of spring security
 #logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
+logging.level.org.springframework.web=ERROR
+logging.level.com.hendisantika.springboot.swagger=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.name=./logs/application.log
