Keycloak as Auth Server, Spring Security as Resource Server, Angular as client, user with email happy@example.com as user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,19 @@ spring.jpa.properties.hibernate.format_sql=true
 # to log debugging of spring security
 #logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
+# Establishing link between Resource Server (My Spring Security Project) and keycloak server. This way this project knows where is my keycloak Auth Server
+# url of keycloak Auth Server from where my resource server can download the public certificate
+
+# behind the scenes my resoruce server during the startup,
+# it will download the public certificate by connecting to the authorization server.
+# So the authorization server will have a private certificate or private key using which it is going to
+# digitally sign all my access token, id token; and my resource server with the help of public certificate,
+# it can validate if the token is tampered by someone or not, if the token is valid or not;
+# this way my resource server don't have to connect with the Auth server whenever it wants
+# to validate a given access token.
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/springsecurity-dev/protocol/openid-connect/certs
+
+
 logging.level.org.springframework.web=ERROR
 logging.level.com.hendisantika.springboot.swagger=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
