client_id and client_secret saved for future use

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,6 @@ logging.level.com.hendisantika.springboot.swagger=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file.name=./logs/application.log
+
+#clientId=6cb53ff9e37451f72b2d
+#clientSecret=cac7e50be4be04f7e59b5f3667b6d0acb2b31b9e
